--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,3 +13,9 @@
 :global(.margin-top-45) {
   margin-top: 45px;
 }
+:global(.chat) {
+  padding: 10px;
+}
+:global(.chat-me) {
+  text-align: right;
+}
